[gd_scene load_steps=2 format=3 uid="uid://c2form_row"]

[ext_resource type="Script" path="res://scripts/ui/FormRow.gd" id="1_script"]

[node name="FormRow" type="PanelContainer"]
custom_minimum_size = Vector2(0, 60)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="DragHandle" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 18
text = "="
mouse_default_cursor_shape = 9

[node name="FormNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 2
text = "Form Name"

[node name="ActionsPreview" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
size_flags_horizontal = 3

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Edit"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
text = "X"
